@@ -1,6 +1,8 @@
 requires 'parent', 0;
 requires 'Tickit', '>= 0.46';
 requires 'Tickit::Widget', 0;
+requires 'Tickit::Widget::Menu', 0;
+requires 'Variable::Disposition', 0;
 requires 'Tickit::WidgetRole::Movable', '>= 0.002';
 requires 'curry::weak', 0;
 
