@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	New features:
+	* Menu popup for max/min/weld/close features
+	* Restore windows after maximise
 
 0.003     2014-08-20 19:59:52+01:00 Europe/London
 	New features:
